tdf#103982 DOCX export: make sure SdrObject margin is non-negative

Regression from commit a5a836d8c43dc9cebbbf8af39bf0142de603a7c6 (DOCX
filter: effect extent should be part of the margin, 2014-12-04), the
effect extent is added to the nominal margin in DOCX, so we exclude that
from the margin in our document model. But it shouldn't be ever
negative, ST_WrapDistance is a restriction of the W3C XML Schema
unsignedInt datatype.

(cherry picked from commit f9f7a4ddaed85427522834597271967ee494b436)

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport9.cxx

Change-Id: I82b3c1ba0e3a14f7c585b0d389264a2c12e454e7
Reviewed-on: https://gerrit.libreoffice.org/31115
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 3cf2b5e0e8edc9d6044f8bc29ca9374f75b498a5)